test/cli/test/mock-global-context/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-global-context
spec:
  failurePolicy: Fail
  rules:
    - name: check-deployment-count
      context:
        - name: deploymentCount
          globalReference:
            name: gctxentry-deployments
            jmesPath: "items | length(@)"
      match:
        all:
          - resources:
              kinds:
                - Deployment
      preconditions:
        all:
          - key: "{{ request.operation }}"
            operator: AnyIn
            value:
              - CREATE
              - UPDATE
      validate:
        failureAction: Enforce
        deny:
          conditions:
            any:
              - key: "{{ deploymentCount }}"
                operator: Equal
                value: 0
