test/cli/test/mock-global-context/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mock-global-context
policies:
- policy.yaml
resources:
- resources.yaml
variables: values.yaml
mockGlobalContextEntries:
  - name: gctxentry-deployments
    data:
      items:
        - name: existing-deployment-1
        - name: existing-deployment-2
results:
- kind: Deployment
  policy: check-global-context
  resources:
  - test-ns/test-deployment
  result: pass
  rule: check-deployment-count
